Add logging configuration file

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ SUPABASE_API_KEY=your-supabase-api-key
 
 # Server config
 SERVER_PORT=your-server-port
+
+# Current logging level
+LOG_LEVEL=DEBUG # Default level
