--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -55,8 +55,8 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/newsalyzer:${{ github.sha }}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}//newsalyzer:cache
-          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}//newsalyzer:cache,mode=max
+          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/newsalyzer:cache
+          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/newsalyzer:cache,mode=max
       
       - name: Set up Docker compose and create .env
         run: |
