--- a/config/pytest.ini
+++ b/config/pytest.ini
@@ -1,7 +1,8 @@
 [pytest]
 
 # Set default loop scope for asyncio fixtures to avoid depreciation due to future pytest-asyncio versions
-asyncio_default_fixture_loop_scope = function
+asyncio_default_fixture_loop_scope =
+    function
 
 # Add default command line options and disable output capturing
 addopts = -v --capture=no
@@ -9,10 +10,20 @@ addopts = -v --capture=no
 # Define custom markers to categorise different tests
 markers =
     asyncio: marks tests that use asyncio
+    fastapi: marks tests specific to FastAPI endpoints
 
 # Define the directory to search for tests
 testpaths = 
-    tests
+    ../tests
+
+# Specify test discovery rules
+python_files = 
+    *_test.py
+    *_tests.py 
 
 # Set rule for event loops
 asyncio_mode = auto
+
+# Display warnings during testing and temporarily ignore depreciation warnings
+filterwarnings =
+    error
