--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -81,7 +81,7 @@ jobs:
       - name: Run API tests
         run: |
           source venv/bin/activate
-          pytest PYTHONPATH=.:./config -c config/pytest.ini tests/api_tests.py
+          pytest -c config/pytest.ini tests/api_tests.py
       
       - name: Stop docker services
         run: |
