--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -67,6 +67,11 @@ jobs:
           echo "SERVER_PORT=${{ secrets.SERVER_PORT }}" >> .env
           echo "LOG_LEVEL=INFO" >> .env
 
+      - name: Create logs directory and set permissions
+        run: |
+          mkdir -p /home/runner/work/newsalyzer/newsalyzer/logs
+          chmod -R 777 /home/runner/work/newsalyzer/newsalyzer/logs
+
       - name: Start services
         run: |
           docker-compose up -d
