--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,7 @@ on:
       - main
 
 jobs:
-  build-and-deploy-docker-image:
+  build:
     runs-on: ubuntu-latest
 
     env:
@@ -58,14 +58,36 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/newsalyzer:cache
           cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/newsalyzer:cache,mode=max
       
-      - name: Set up Docker compose and create .env
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    env:
+      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      SUPABASE_API_KEY: ${{ secrets.SUPABASE_API_KEY }}
+      SERVER_PORT: ${{ secrets.SERVER_PORT }}
+      LOG_LEVEL: DEBUG
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup environment variables
         run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
           echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" > .env
           echo "SUPABASE_API_KEY=${{ secrets.SUPABASE_API_KEY }}" >> .env
           echo "SERVER_PORT=${{ secrets.SERVER_PORT }}" >> .env
-          echo "LOG_LEVEL=INFO" >> .env
+          echo "LOG_LEVEL=${{ env.LOG_LEVEL }}" >> .env
+
+      - name: Install docker-compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
+      - name: Pull latest Docker image
+        run: |
+          docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/newsalyzer:${{ github.sha }}
 
       - name: Create logs directory and set permissions
         run: |
@@ -82,6 +104,43 @@ jobs:
             echo "Waiting for service to become healthy..."
             sleep 5
           done
+
+  
+  test:
+    runs-on: ubuntu-latest
+    needs: deploy
+
+    env:
+      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      SUPABASE_API_KEY: ${{ secrets.SUPABASE_API_KEY }}
+      SERVER_PORT: ${{ secrets.SERVER_PORT }}
+      LOG_LEVEL: DEBUG
+
+    steps:
+
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+
+      - name: Set up virtual environment
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+
+      - name: Install requirements
+        run: |
+          source venv/bin/activate
+          python -m pip install --upgrade pip
+          pip install -r app/requirements.txt
+
+      - name: Check Supabase Connectivity # Temp to debug test failures
+        run: |
+          curl -X GET "${{ secrets.SUPABASE_URL }}/rest/v1/"
 
       - name: Run API tests
         run: |
