--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,7 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-deploy-docker-image:
     runs-on: ubuntu-latest
 
     env:
@@ -34,7 +34,7 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-
+          
       - name: Install requirements
         run: |
           source venv/bin/activate
@@ -58,37 +58,15 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/newsalyzer:cache
           cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/newsalyzer:cache,mode=max
       
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    env:
-      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-      SUPABASE_API_KEY: ${{ secrets.SUPABASE_API_KEY }}
-      SERVER_PORT: ${{ secrets.SERVER_PORT }}
-      LOG_LEVEL: DEBUG
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Setup environment variables
-        run: |
-          echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" > .env
-          echo "SUPABASE_API_KEY=${{ secrets.SUPABASE_API_KEY }}" >> .env
-          echo "SERVER_PORT=${{ secrets.SERVER_PORT }}" >> .env
-          echo "LOG_LEVEL=${{ env.LOG_LEVEL }}" >> .env
-
-      - name: Install docker-compose
+      - name: Set up Docker compose and create .env
         run: |
           sudo apt-get update
           sudo apt-get install -y docker-compose
-
-      - name: Pull latest Docker image
-        run: |
-          docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/newsalyzer:${{ github.sha }}
-
+          echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" > .env
+          echo "SUPABASE_API_KEY=${{ secrets.SUPABASE_API_KEY }}" >> .env
+          echo "SERVER_PORT=${{ secrets.SERVER_PORT }}" >> .env
+          echo "LOG_LEVEL=INFO" >> .env
+      
       - name: Create logs directory and set permissions
         run: |
           mkdir -p /home/runner/work/newsalyzer/newsalyzer/logs
@@ -96,51 +74,14 @@ jobs:
 
       - name: Start services
         run: |
-          docker-compose up --build -d
+          docker-compose up -d
 
-      # - name: Check FastAPI health
-      #   run: |
-      #     until curl -f http://localhost:${{ secrets.SERVER_PORT }}/health; do
-      #       echo "Waiting for service to become healthy..."
-      #       sleep 5
-      #     done
-
-  
-  test:
-    runs-on: ubuntu-latest
-    needs: deploy
-
-    env:
-      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-      SUPABASE_API_KEY: ${{ secrets.SUPABASE_API_KEY }}
-      SERVER_PORT: ${{ secrets.SERVER_PORT }}
-      LOG_LEVEL: DEBUG
-
-    steps:
-
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-          cache: 'pip'
-
-      - name: Set up virtual environment
+      - name: Check FastAPI health
         run: |
-          python -m venv venv
-          source venv/bin/activate
-
-      - name: Install requirements
-        run: |
-          source venv/bin/activate
-          python -m pip install --upgrade pip
-          pip install -r app/requirements.txt
-
-      - name: Check Supabase Connectivity # Temp to debug test failures
-        run: |
-          curl -X GET "${{ secrets.SUPABASE_URL }}/rest/v1/"
+          until curl -f http://localhost:${{ secrets.SERVER_PORT }}/health; do
+            echo "Waiting for service to become healthy..."
+            sleep 5
+          done
 
       - name: Run API tests
         run: |
