Revert "Remove problematic step temporarily"
This reverts commit ab4c51be7362f245d68cc18f2b4b5f8970ab2850.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -98,12 +98,15 @@ jobs:
         run: |
           docker-compose up --build -d
 
-      # - name: Check FastAPI health
-      #   run: |
-      #     until curl -f http://localhost:${{ secrets.SERVER_PORT }}/health; do
-      #       echo "Waiting for service to become healthy..."
-      #       sleep 5
-      #     done
+      - name: Debug Container Logs # Temp to debug test failures
+        run: docker logs $(docker ps -q)
+
+      - name: Check FastAPI health
+        run: |
+          until curl -f http://localhost:${{ secrets.SERVER_PORT }}/health; do
+            echo "Waiting for service to become healthy..."
+            sleep 5
+          done
 
   
   test:
