Revert "Update FastAPI url"
This reverts commit 97efec6ec0dab5cf0e74ea5bcccaf529e8db9252.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -103,7 +103,7 @@ jobs:
 
       - name: Check FastAPI health
         run: |
-          until curl -f http://localhost:${{ secrets.SERVER_PORT }}/health; do
+          until curl -f http://app:${{ secrets.SERVER_PORT }}/health; do
             echo "Waiting for service to become healthy..."
             sleep 5
           done
