Revert "Add debug statements to ci-cd to diagnose issue with FastAPI health check connection"
This reverts commit e3c666b60bf5f3cc12039fd1188a9c186b0a3256.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -96,14 +96,11 @@ jobs:
 
       - name: Start services
         run: |
-          docker-compose up --build -d
-
-      - name: Debug Container Logs # Temp to debug test failures
-        run: docker logs $(docker ps -q)
+          docker-compose up -d
 
       - name: Check FastAPI health
         run: |
-          until curl -f http://app:${{ secrets.SERVER_PORT }}/health; do
+          until curl -f http://localhost:${{ secrets.SERVER_PORT }}/health; do
             echo "Waiting for service to become healthy..."
             sleep 5
           done
