--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,10 @@ services:
       - .:/app
     healthcheck:
       # Verify FastAPI endpoints are accessible
-      test: ["CMD-SHELL", "curl --fail --max-time 10 --write-out '%{http_code}\n' --output /dev/stdout http://app:9000/health | grep -q '200' || exit 1"]
-      interval: 60s
-      timeout: 10s
-      retries: 5
+      test: ["CMD-SHELL", "curl --fail --max-time 10 --write-out '%{http_code}\n' --output /dev/stdout http://app:${SERVER_PORT:-9000}/health | grep -q '200' || exit 1"]
+      interval: 30s
+      timeout: 30s
+      retries: 10
     networks:
       # Connect container to 'newsalyzer-network'
       - newsalyzer-network
